@@ -35,7 +35,7 @@ class UnsafeQualifiedStaticShortFieldAccessorImpl
     }
 
     public Object get(Object obj) throws IllegalArgumentException {
-        return new Short(getShort(obj));
+        return Short.valueOf(getShort(obj));
     }
 
     public boolean getBoolean(Object obj) throws IllegalArgumentException {
